<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <androidx.constraintlayout.widget.ConstraintLayout
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:background="@drawable/back_dialog"
       android:layout_width="@dimen/_270sdp"
       android:layout_height="wrap_content">
       <com.airbnb.lottie.LottieAnimationView
           android:id="@+id/lottie_anim"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintWidth_percent="0.4"
           app:layout_constraintTop_toTopOf="parent"
           android:layout_marginTop="@dimen/_10sdp"
           app:lottie_rawRes="@raw/log_out"
           app:lottie_loop="true"
           android:adjustViewBounds="true"
           app:lottie_autoPlay="true"
           android:layout_width="0dp"
           android:layout_height="@dimen/_120sdp"/>
       <TextView
           android:id="@+id/text_other"
           app:layout_constraintTop_toBottomOf="@id/lottie_anim"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           android:layout_marginTop="@dimen/_8sdp"
           app:layout_constraintWidth_percent="0.9"
           android:textStyle="normal"
           android:textSize="@dimen/_12sdp"
           android:textColor="@color/textColor"
           android:fontFamily="@font/inter_medium"
           android:text="@string/log_out"
           android:gravity="center"
           android:layout_width="0dp"
           android:layout_height="wrap_content"/>
       <LinearLayout
           app:layout_constraintTop_toBottomOf="@id/text_other"
           app:layout_constraintLeft_toLeftOf="@id/text_other"
           app:layout_constraintRight_toRightOf="@id/text_other"
           app:layout_constraintBottom_toBottomOf="parent"
           android:orientation="horizontal"
           android:layout_marginBottom="@dimen/_10sdp"
           android:layout_marginTop="@dimen/_6sdp"
           android:layout_width="0dp"
           android:layout_height="wrap_content">
           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/cancel_button"
               android:layout_weight="1"
               android:textColor="@color/white"
               android:textSize="@dimen/_10sdp"
               android:textStyle="normal"
               android:text="@string/cancel"
               android:textAllCaps="false"
               android:fontFamily="@font/inter_medium"
              android:layout_marginEnd="@dimen/_3sdp"
               android:background="@drawable/dialog_cancel_btn"
               android:layout_width="match_parent"
               android:layout_height="@dimen/_30sdp"/>
           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/ok_btn"
               android:layout_weight="1"
               android:textColor="@color/white"
               android:textSize="@dimen/_10sdp"
               android:textStyle="normal"
               android:text="@string/yes"
               android:textAllCaps="false"
               android:fontFamily="@font/inter_medium"
              android:layout_marginStart="@dimen/_3sdp"
               android:background="@drawable/dialog_ok_btn"
               android:layout_width="match_parent"
               android:layout_height="@dimen/_30sdp"/>
       </LinearLayout>
   </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>