<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cons_auth"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.pages.authPage.AuthFragment">
    <ImageView
        android:id="@+id/image_auth"
        android:src="@drawable/ic_auth"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintVertical_bias="0.05"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/title"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        android:textColor="@color/hintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:fontFamily="@font/inter_medium"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/image_auth"
        app:layout_constraintLeft_toLeftOf="@id/login"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_bias="0"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/login"
        android:inputType="text"
        android:layout_marginTop="@dimen/_2sdp"
        android:textColor="@color/textColor"
        android:paddingHorizontal="@dimen/_6sdp"
        android:textStyle="normal"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/back_edite_text"
        android:paddingVertical="@dimen/_8sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.94"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/title_password"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"

        android:textColor="@color/hintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.06"
        android:fontFamily="@font/inter_medium"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintLeft_toLeftOf="@id/login"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_bias="0"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_2sdp"
        android:textColor="@color/textColor"
        android:textStyle="normal"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintTop_toBottomOf="@id/title_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingHorizontal="@dimen/_6sdp"
        android:background="@drawable/back_edite_text"
        android:paddingVertical="@dimen/_8sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.94"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:background="@drawable/button_back"
        android:text="@string/login_btn"
        android:enabled="false"
        android:textSize="@dimen/_13sdp"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintLeft_toLeftOf="@id/password"
        app:layout_constraintRight_toRightOf="@id/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>