<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cons_settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.pages.settings.SettingsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_toolbar"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:id="@+id/toolbar_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHorizontal_bias="0.3"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:text="@string/settings"
            android:fontFamily="@font/inter_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <View
            android:id="@+id/line"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/line_color"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/cons_toolbar"
        app:layout_constraintBottom_toTopOf="@id/card_logout"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_mode"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.02"
            android:layout_height="@dimen/_35sdp">
            <com.suke.widget.SwitchButton
                app:sb_checked="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:sb_checked_color="@color/buttonDarkColor"
                app:layout_constraintHorizontal_bias="0.97"
                android:id="@+id/theme_check_box"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_23sdp"/>
            <TextView
                android:id="@+id/mode_tv"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_13sdp"
                android:text="@string/day_mode"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="@id/theme_check_box"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/theme_check_box"
                app:layout_constraintBottom_toBottomOf="@id/theme_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_lang"
            android:layout_marginTop="@dimen/_5sdp"
           app:layout_constraintTop_toBottomOf="@id/cons_mode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp">
            <TextView
                android:id="@+id/lang_tex"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:sb_checked_color="@color/buttonDarkColor"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:text="RU"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintHorizontal_bias="0.95"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/lan_tv"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_13sdp"
                android:text="@string/language"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="@id/lang_tex"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/lang_tex"
                app:layout_constraintBottom_toBottomOf="@id/lang_tex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.cardview.widget.CardView
    android:id="@+id/card_logout"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:cardCornerRadius="@dimen/_6sdp"
    app:layout_constraintVertical_bias="0.98"
    app:layout_constraintWidth_percent="0.95"
    app:layout_constraintHeight_percent="0.07"
    app:cardElevation="0dp"
    android:layout_width="0dp"
    android:layout_height="@dimen/_38sdp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_logout"
        android:background="@drawable/logout_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="normal"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/logout_color"
            android:fontFamily="@font/inter_medium"
            android:text="@string/logout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>